[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Maps/Map1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Towers/towerDefense_tile251.png" type="Texture" id=2]
[ext_resource path="res://Assets/Towers/towerDefense_tile249.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Buttons/button_rectangle_gradient.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MainScenes/UI.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=6]
[ext_resource path="res://Assets/Icons/fastForward.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/pause.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/right.png" type="Texture" id=9]
[ext_resource path="res://Assets/Icons/home.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/HPbar.jpg" type="Texture" id=12]
[ext_resource path="res://Resources/Fonts/fkn_30_o1.tres" type="DynamicFont" id=13]
[ext_resource path="res://Resources/Fonts/fkn_50_o1.tres" type="DynamicFont" id=14]
[ext_resource path="res://Assets/UI/Buttons/button_rectangle_flat.png" type="Texture" id=15]
[ext_resource path="res://Resources/Fonts/fkn_20_o1.tres" type="DynamicFont" id=16]

[node name="GameScene" type="Node2D"]
script = ExtResource( 6 )

[node name="Map1" parent="." instance=ExtResource( 1 )]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -400.0
margin_right = 100.0
rect_min_size = Vector2( 100, 400 )
custom_constants/separation = 25

[node name="Gun" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_right = 90.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
texture_normal = ExtResource( 4 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/Gun"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 3 )

[node name="Missile" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
visible = false
margin_left = 10.0
margin_top = 105.0
margin_right = 90.0
margin_bottom = 185.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
texture_normal = ExtResource( 4 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/Missile"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 2 )

[node name="GameControls" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -260.0
margin_top = -80.0
margin_right = 24.0
margin_bottom = -10.0
rect_min_size = Vector2( 210, 70 )
alignment = 1

[node name="NextWaveButton" type="TextureButton" parent="UI/HUD/GameControls"]
margin_left = 37.0
margin_right = 247.0
margin_bottom = 70.0
rect_min_size = Vector2( 210, 0 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 15 )
expand = true

[node name="Label" type="Label" parent="UI/HUD/GameControls/NextWaveButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 16 )
text = "Start Next Wave"
align = 1
valign = 1

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color( 0, 0, 0, 0.470588 )
anchor_right = 1.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 60 )

[node name="H" type="HBoxContainer" parent="UI/HUD/InfoBar"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Symbol" type="Label" parent="UI/HUD/InfoBar/H"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 65.0
rect_min_size = Vector2( 120, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 14 )
text = "$"
align = 2
valign = 1

[node name="Money" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 124.0
margin_top = 5.0
margin_right = 234.0
margin_bottom = 65.0
rect_min_size = Vector2( 110, 60 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = ExtResource( 13 )
text = "100"
align = 2
valign = 1

[node name="Control2" type="Control" parent="UI/HUD/InfoBar/H"]
margin_left = 238.0
margin_right = 688.0
margin_bottom = 70.0
rect_min_size = Vector2( 450, 0 )

[node name="SpeedUp" type="TextureButton" parent="UI/HUD/InfoBar/H"]
margin_left = 692.0
margin_right = 762.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 7 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/InfoBar/H"]
margin_left = 766.0
margin_right = 826.0
margin_bottom = 70.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 10
texture = ExtResource( 11 )
expand = true

[node name="HP" type="TextureProgress" parent="UI/HUD/InfoBar/H"]
margin_left = 830.0
margin_top = 20.0
margin_right = 1230.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 30 )
size_flags_vertical = 4
value = 100.0
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 12 )
tint_under = Color( 0.215686, 0.215686, 0.215686, 1 )
tint_progress = Color( 0.545098, 1, 0, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="UI/HUD/InfoBar/H/HP"]

[node name="Control" type="Control" parent="UI/HUD/InfoBar/H"]
margin_left = 1234.0
margin_right = 1304.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 0 )

[node name="ExtraGameControls" type="Control" parent="UI/HUD"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="PausePlay" type="TextureButton" parent="UI/HUD/ExtraGameControls"]
pause_mode = 2
visible = false
margin_left = 1136.0
margin_top = 650.0
margin_right = 1206.0
margin_bottom = 720.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
expand = true

[connection signal="pressed" from="UI/HUD/InfoBar/H/SpeedUp" to="UI" method="_on_SpeedUp_pressed"]
[connection signal="pressed" from="UI/HUD/ExtraGameControls/PausePlay" to="UI" method="_on_PausePlay_pressed"]
